[package]
name = "rust_sniffer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
btleplug = "0.11.5"
futures = "0.3.30"
pretty_env_logger = "0.5.0"
rand = "0.8.5"
tokio = { version = "1.36.0", features = ["full"] }
uuid = "1.7.0"
